--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github # Refer to https://www.netlifycms.org/docs/authentication-backends/ for auth backend list and instructions
-  branch: master # Branch to update
+  branch: draft # Branch to update
   repo: matome01/matome01 # Repo for pushing new commits. Make sure to replace with your repo!
 
 media_folder: static/assets
