--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-twitter": "2.0.8",
     "gatsby-remark-autolink-headers": "2.0.12",
     "gatsby-remark-copy-linked-files": "2.0.8",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "3.0.1",
     "gatsby-remark-prismjs": "3.2.0",
     "gatsby-remark-relative-images": "0.2.1",
