--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
 [build]
   publish = "public"
-  command = "yarn run build"
+  command = "npm run build"
 [build.environment]
-  YARN_VERSION = "1.7.0"
