--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "gatsby-remark-images": "3.0.1",
     "gatsby-remark-prismjs": "3.2.0",
     "gatsby-remark-relative-images": "0.2.1",
-    "gatsby-remark-responsive-iframe": "2.0.8",
+    "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-source-filesystem": "2.0.16",
     "gatsby-transformer-remark": "2.2.0",
     "gatsby-transformer-sharp": "2.1.10",
     "lodash": "^4.17.10",
-    "moment": "^2.23.0",
+    "moment": "^2.24.0",
     "netlify-cms": "2.3.3",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
     "react-md": "^1.9.2",
     "react-share": "^2.4.0",
@@ -47,14 +47,14 @@
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
-    "prettier": "^1.16.0",
+    "prettier": "^1.16.4",
     "remark-cli": "^6.0.1",
     "remark-preset-lint-recommended": "^3.0.1",
     "stylefmt": "^6.0.3",
