--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "gatsby-plugin-offline": "2.0.21",
     "gatsby-plugin-react-helmet": "3.0.5",
     "gatsby-plugin-sass": "2.0.7",
-    "gatsby-plugin-sharp": "2.0.17",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-sitemap": "2.0.4",
     "gatsby-plugin-twitter": "2.0.8",
     "gatsby-remark-autolink-headers": "2.0.12",
     "gatsby-remark-copy-linked-files": "2.0.8",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "3.0.1",
+    "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-prismjs": "3.2.0",
     "gatsby-remark-relative-images": "0.2.1",
     "gatsby-remark-responsive-iframe": "^2.0.9",
