npm run f command added

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build && gh-pages -d public -b master",
+    "f": "npm run clean && npm run build && npm run serve"
   },
   "remarkConfig": {
     "plugins": [
