gatsby-config.js service worker offline support config, package.json update, PostSuggestion.scss update

--- a/package.json
+++ b/package.json
@@ -5,40 +5,40 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "gatsby": "2.0.119",
+    "gatsby": "2.1.17",
     "gatsby-image": "2.0.29",
     "gatsby-plugin-catch-links": "2.0.11",
     "gatsby-plugin-feed": "2.0.13",
-    "gatsby-plugin-google-analytics": "2.0.13",
+    "gatsby-plugin-google-analytics": "2.0.14",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-lodash": "3.0.4",
-    "gatsby-plugin-manifest": "2.0.17",
+    "gatsby-plugin-manifest": "2.0.19",
     "gatsby-plugin-netlify-cms": "3.0.12",
     "gatsby-plugin-nprogress": "2.0.8",
-    "gatsby-plugin-offline": "2.0.23",
+    "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "3.0.6",
     "gatsby-plugin-sass": "2.0.10",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-sitemap": "2.0.5",
+    "gatsby-plugin-sharp": "^2.0.22",
+    "gatsby-plugin-sitemap": "2.0.6",
     "gatsby-plugin-twitter": "2.0.9",
     "gatsby-remark-autolink-headers": "2.0.14",
     "gatsby-remark-copy-linked-files": "2.0.9",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.0.3",
+    "gatsby-remark-images": "^3.0.5",
     "gatsby-remark-prismjs": "3.2.4",
     "gatsby-remark-relative-images": "0.2.1",
     "gatsby-remark-responsive-iframe": "^2.0.9",
-    "gatsby-source-filesystem": "2.0.20",
-    "gatsby-transformer-remark": "2.2.5",
-    "gatsby-transformer-sharp": "2.1.13",
+    "gatsby-source-filesystem": "^2.0.22",
+    "gatsby-transformer-remark": "2.2.6",
+    "gatsby-transformer-sharp": "2.1.14",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "netlify-cms": "2.4.2",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
-    "react": "^16.8.1",
+    "react": "^16.8.3",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-md": "^1.9.2",
     "react-share": "^2.4.0",
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.16.0",
