--- a/package.json
+++ b/package.json
@@ -5,32 +5,32 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "gatsby": "2.1.17",
-    "gatsby-image": "2.0.29",
+    "gatsby": "^2.12.1",
+    "gatsby-image": "^2.2.39",
     "gatsby-plugin-catch-links": "2.0.11",
     "gatsby-plugin-feed": "2.0.13",
     "gatsby-plugin-google-analytics": "2.0.14",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-lodash": "3.0.4",
-    "gatsby-plugin-manifest": "2.0.19",
+    "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-netlify-cms": "3.0.12",
     "gatsby-plugin-nprogress": "2.0.8",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "3.0.6",
     "gatsby-plugin-sass": "2.0.10",
-    "gatsby-plugin-sharp": "^2.0.22",
+    "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-sitemap": "2.0.6",
     "gatsby-plugin-twitter": "2.0.9",
     "gatsby-remark-autolink-headers": "2.0.14",
     "gatsby-remark-copy-linked-files": "2.0.9",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.0.5",
+    "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-prismjs": "3.2.4",
-    "gatsby-remark-relative-images": "0.2.1",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-source-filesystem": "^2.0.22",
-    "gatsby-transformer-remark": "2.2.6",
-    "gatsby-transformer-sharp": "2.1.14",
+    "gatsby-transformer-remark": "^2.6.48",
+    "gatsby-transformer-sharp": "^2.3.13",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "netlify-cms": "2.4.2",
